Fix strings too long on my trips. Tracking server works with endtime and not duration

--- a/viaggia-mobile/www/css/style.css
+++ b/viaggia-mobile/www/css/style.css
@@ -1144,6 +1144,11 @@ ion-header-bar .title {
     text-overflow: ellipsis;
 }
 
+.row-my-trips {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .bm-item-label.highlight {
     font-weight: bold;
 }
